# gnome-clickup-dash

./: .editorconfig  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  Procfile  README.md  argoshook.py  clickup.py  models.py  pyproject.toml  requirements.txt  tasks.py  webhooklistener.py
gnome-extension/: extension.js  metadata.json
web/: client.py  models.py  webhooklistener.py
