[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gnome-clickup-dash"
version = "0.0.1"
description = "Tools to interact with ClickUp."
authors = [
  "Peter Waldert <peter@waldert.at>"
]

[tool.nitpick]
style = [
  "github://MrP01/lint-me-now/nitpick-base-style.toml",
  "github://MrP01/lint-me-now/nitpick-python-style.toml"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
motor = "^2.5.1"
dnspython = "^2.1.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
black = "^22.1.0"
isort = "^5.10.1"
pylint = "^2.12.2"
bandit = "^1.7.4"
flakeheaven = "^0.11.1"
mypy = "^0.931"
pyright = "^1.1.227"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]
[tool.pylint.MASTER]
jobs = 1
extension-pkg-whitelist = "pydantic"

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint.FORMAT]
max-line-length = 120
max-module-lines = 1000
indent-after-paren = 4

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "invalid-name",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "unspecified-encoding",
  "attribute-defined-outside-init",
  "wildcard-import",
  "unused-wildcard-import",
  "too-few-public-methods",
  "logging-fstring-interpolation"
]

[tool.flakeheaven]
ignore = "D107,D202,D203,D401,E203,E402,E501,W503"
max_line_length = 120
inline-quotes = "double"

[tool.pyright]
